--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,9 @@ body {
     padding: 0.1rem;
     background-image: url("/images/minions1.png");
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position-x: center;
-    background-position-y: 55vh;
+    background-position-y: 46vh;
     background-color: var(--bg-color);
     font-size: 24px;
 
@@ -79,12 +79,12 @@ textarea {
     text-align: center;
 }
 
-.banana-img{
+/* .banana-img{
     padding: 1rem;
     float: left;
     max-width: 250px;
     display: inline-block;
-    position: relative;
+    position: static;
 }
 
 .banana-img2{
@@ -92,5 +92,33 @@ textarea {
     float: right;
     max-width: 250px;
     display: inline-block;
+    position: static
+} */
+
+/* #footer{
     position: relative;
+    bottom: 100;
+    height : 100px;
+    margin-top : 100px;
+    
+} */
+
+
+
+.about{
+    text-align: center;
+    background-color: yellow;
+    opacity: 0.9;
+    max-width: 100%;
+    margin: auto;
+    margin-top: 300px;
+    padding-top: 0.1rem;
+    padding-bottom: 1rem;
+    font-size: 20px;
+    border-radius: 1rem;
+}
+.info{
+    max-width: 700px;
+    text-align: center;
+    margin: auto;
 }
