--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position-x: center;
-    background-position-y: 46vh;
+    background-position-y: 50vh;
     background-color: var(--bg-color);
     font-size: 24px;
 
@@ -121,4 +121,7 @@ textarea {
     max-width: 700px;
     text-align: center;
     margin: auto;
+}
+p{
+    font-size: 20px;
 }
